<resources>
    <string name="app_name">appName</string>

    <!--Drawer-->
    <string name="open_drawer" translatable="false">Drawer Open</string>
    <string name="close_drawer" translatable="false">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed" translatable="false">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error" translatable="false">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>

    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_email_hint">example@domain.com</string>
    <string name="login_password_hint">*******</string>
    <string name="login_btn">Login</string>
    <string name="login_don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="login_link_sign_up">Sign up</string>
    <string name="login_forgot_your_password">Forgot your password?</string>


    <!--    SignUp-->
    <string name="sign_title">Sign up</string>
    <string name="sign_first_name">First name</string>
    <string name="sign_first_name_hint">Enter first name</string>
    <string name="sign_middle_name">Middle name</string>
    <string name="sign_middle_name_hint">Enter middle name</string>
    <string name="sign_last_name">Last name</string>
    <string name="sign_last_name_hint">Enter last name</string>
    <string name="sign_secret_question">Secret question</string>
    <string name="sign_answer">Answer</string>
    <string name="sign_answer_hint">Enter your answer here</string>
    <string name="sign_email">Email</string>
    <string name="sign_password">Password</string>
    <string name="sign_email_hint">example@domain.com</string>
    <string name="sign_password_hint">*******</string>
    <string name="sign_btn">Sign up</string>
    <string name="sign_already_have_an_account">Do you have an account already?</string>
    <string name="sign_link_login">Login</string>


    <!--  SignUp fields  -->
    <string name="first_name">First name</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="middle_name">Middle name</string>
    <string name="middle_name_hint">Enter middle name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="secret_question">Secret question</string>
    <string name="email">Email</string>
    <string name="answer">Answer</string>
    <string name="answer_hint">Enter your answer here</string>
    <string name="already_have_an_account">Do you have an account already?</string>

    <!--SignUp Validation-->
    <string name="empty_first_name">Please provide a non empty first name.</string>
    <string name="empty_middle_name">Please provide a non empty middle name.</string>
    <string name="empty_last_name">Please provide a non empty last name.</string>
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="empty_password">Please provide a non empty password.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="invalid_secret_question">Please select your secret question.</string>
    <string name="invalid_secret_question_answer">Please provide a non empty answer.</string>
    <string name="empty_secret_question_answer">Please provide a non empty answer to secret question.</string>

    <!--feed-->
    <string name="title" translatable="false">My Feed</string>
    <string name="open_source" translatable="false">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="image_content" translatable="false">mehh</string>

    <string name="long_text" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="accept">ACCEPT</string>
    <string name="decline" translatable="false">DECLINE</string>

    <!-- prompt dialog resource-->
    <string name="are_you_sure_you_want_to_logout" translatable="false">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_discard" translatable="false">Are you sure you want to discard crew member\'s info and leave?</string>
    <string name="logout_dialog">LOGOUT</string>
    <string name="discard_dialog" translatable="false">DISCARD</string>
    <string name="cancel">CANCEL</string>

    <string name="go_to_settings" translatable="false">GOTO SETTINGS</string>
    <string name="search_crew_title">Search Crew...</string>
    <string name="search">Search...</string>

    <string name="menu">Menu</string>
    <string name="menu_date">Date</string>
    <string name="add">ADD</string>
    <string name="mark_all">mark all</string>

    <!-- Languages-->
    <string name="english" translatable="false">English</string>
    <string name="amharic" translatable="false">አማርኛ</string>
    <string name="available_language">Available languages</string>

    <!--    Settings-->
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="url_settings">Base URL settings</string>
    <string name="language">Language</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="microphone">Microphone</string>
    <string name="storage">Storage</string>

    <!-- permission related strings -->
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="camera_permission_profile">Camera permission is needed for taking picture. Please, allow it!</string>
    <string name="storage_permission_profile">Access to storage permission is needed for adding picture from gallery. Please, allow it!</string>
    <string name="camera_permission">Camera permission is needed for scanning QR Code scanning so please, allow it!</string>
    <string name="camer_permission_for_qr_code_scanner">Camera permission is required for QR Code scanning.</string>
    <string name="camer_permission_for_profile_picture">Camera permission is required for adding picture.</string>
    <string name="storage_permission_for_profile_picture">Access storage permission is required for adding picture.</string>
    <string name="dialog_title_permission">Permission</string>
    <string name="dialog_message_storage_permission">Storage permission is needed for saving file. Please, allow it!</string>
    <string name="dialog_message_storage_access_denied">Storage access permission denied.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="signup">SIGNUP</string>

</resources>
