<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/progressbar_cyclic"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/ginora_sans_light"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:textAllCaps="true"
                        android:fontFamily="@font/ginora_sans_semi_bold"
                        android:text="@string/login_title"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:fontFamily="sans-serif-condensed-light"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:text="@string/login_email"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_username"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/input_bg_curved_grey"
                        android:cursorVisible="true"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center|left|bottom"
                        android:hint="@string/login_email_hint"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:maxLength="50"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/vertical_margin_12"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/vertical_margin_12"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:fontFamily="sans-serif-condensed-light"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:text="@string/login_password"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/input_bg_curved_grey"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:paddingStart="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/vertical_margin_12"
                        android:paddingEnd="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/vertical_margin_12"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />


                    <RelativeLayout
                        android:id="@+id/register_crew_qualification_spinner_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="@dimen/horizontal_margin_8"
                        android:visibility="gone">

                        <Spinner
                            android:id="@+id/login_site"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:background="@drawable/input_bg_curved_grey_light"
                            android:padding="3dp" />

                        <ImageView
                            android:id="@+id/register_employee_type_spinner_icon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="@dimen/vertical_margin_12"
                            android:layout_marginRight="@dimen/vertical_margin_12"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginStart="@dimen/activity_horizontal_margin_32dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin_32dp"
                        android:layerType="software"
                        android:src="@drawable/dotted" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/btn_bg_curved_stroke"
                        android:text="@string/login_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="2dp"
                            android:text="@string/login_don_t_have_an_account_yet"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/btn_signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:padding="2dp"
                            android:text="@string/login_link_sign_up"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_forgot_your_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:fontFamily="sans-serif-light"
                        android:padding="2dp"
                        android:text="@string/login_forgot_your_password"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressbar_cyclic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:minWidth="50dp"
                    android:minHeight="50dp"
                    android:visibility="gone" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin_32dp"
            android:fontFamily="@font/ginora_sans_semi_bold"
            android:padding="2dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
